FIXED: Don't hardcode level 13 for the loose floor events.
DONE: Mention the tricks page in the INI, since tricks are mentioned there.
FIXED: If a sprite's xpos is negative and divisible by 8, it appeared shifted 8 pixels to the left.
	Details: See FIX_SPRITE_XPOS in config.h .
FIXED: Report any missing data file as soon as we try to open it, instead of only when we try to load data from it.
FIXED: If the place of a special event was changed, show it at its new place on level maps.
	This works only with events whose place can be customized.
DONE: Show guards' HP and skills on the maps.
FIXED: Don't complain about data files missing from the mod folder.
DONE: Added options to use the original music and/or graphics for custom levelsets.
DONE: Added gamecontroller hotplug support. SDLPoP now detects controllers plugged in while the game is already running.
	Details: https://github.com/NagyD/SDLPoP/pull/256
FIXED: Fixed black rectangle appearing when the shadow falls into the wall.
	Details: See FIX_BLACK_RECT in config.h and https://github.com/NagyD/SDLPoP/issues/254
	Testcase: doc/replays-testcases/Original level 5 shadow into wall.p1r
DONE: Briefly show a dark screen when changing rooms, like in the original game.
	See USE_DARK_TRANSITION in config.h .
DONE: Added support for reading mirror_column from the EXE if it's different from mirror_room.
	(For Shauing's upcoming mod.)
DONE: Added support for changing where the shadow steals the potion and steps on the button.
	(For Shauing's upcoming mod.)
DONE: Added a configurable fix for trick 153
	Details: See FIX_DROP_2_ROOMS_CLIMBING_LOOSE_TILE in config.h and https://github.com/NagyD/SDLPoP/pull/272
	Testcase: doc/replays-testcases/trick_153.p1r
DONE: Added a configurable fix for falling through floors during a sword strike.
	Details: See FIX_FALLING_THROUGH_FLOOR_DURING_SWORD_STRIKE in config.h and https://github.com/NagyD/SDLPoP/pull/274
	Testcase: doc/replays-testcases/Falling through floor (PR274).p1r